Add buttons to Task component

--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -4,7 +4,13 @@
 
     <header>
 
-      <h1>Todo List</h1>
+           <h1>Todo List</h1>
+
+      <form class="new-task">
+
+        <input type="text" name="text" placeholder="Type to add new tasks" />
+
+      </form>
 
     </header>
 
@@ -28,3 +34,4 @@
 
 </template>
 
+ 
